--- a/Noted/Noted.csproj
+++ b/Noted/Noted.csproj
@@ -6,6 +6,11 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <ApplicationIcon>NotedIcon.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="NotedIcon.ico" />
+  </ItemGroup>
 
 </Project>
